<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#36FFDAB9"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dimen24"
        android:paddingRight="@dimen/dimen24"
        android:paddingTop="@dimen/dimen20">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen100"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dimen24"
            android:contentDescription="@string/redchillies"
            android:src="@drawable/homelog4" />
        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen20">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen45"
                android:background="@drawable/edittextstyle"
                android:fontFamily="serif"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/textsize20" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen20">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen45"
                android:background="@drawable/edittextstyle"
                android:fontFamily="serif"
                android:hint="@string/password_6_characters_min"
                android:inputType="textPassword"
                android:textSize="@dimen/textsize20" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen20">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen45"
                android:background="@drawable/edittextstyle"
                android:fontFamily="serif"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textSize="@dimen/textsize20" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen20">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen45"
                android:background="@drawable/edittextstyle"
                android:fontFamily="serif"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:textSize="@dimen/textsize20" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen20">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen45"
                android:background="@drawable/edittextstyle"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="serif"
                android:hint="@string/country"
                android:inputType="textCapWords"
                android:text="@string/united_states"
                android:textSize="@dimen/textsize20" />
        </android.support.design.widget.TextInputLayout>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen24"
            android:layout_marginTop="@dimen/dimen24"
            android:background="#F08080"
            android:padding="@dimen/dimen12"
            android:text="@string/submit" />

        <TextView
            android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen24"
            android:gravity="center"
            android:text="@string/already_a_member_login"
            android:textSize="@dimen/textsize16" />
    </LinearLayout>
</ScrollView>