<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#36FFDAB9"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dimen24"
        android:paddingRight="@dimen/dimen24"
        android:paddingTop="@dimen/dimen56">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen100"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dimen24"
            android:contentDescription="@string/redchillies"
            android:src="@drawable/homelog4" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/google_sign_in" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:visibility="gone" />
        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen20">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen40"
                android:background="@drawable/edittextstyle"
                android:fontFamily="serif"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/textsize20" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen20">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen40"
                android:background="@drawable/edittextstyle"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="@dimen/textsize20" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen24"
            android:layout_marginTop="@dimen/dimen24"
            android:background="#F08080"
            android:padding="@dimen/dimen12"
            android:text="@string/login"
            android:textSize="@dimen/textsize20" />

        <TextView
            android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen24"
            android:gravity="center"
            android:text="@string/no_account_yet_create_one"
            android:textSize="24sp" />
    </LinearLayout>
</ScrollView>
