<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_checkout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/dimen55"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:weightSum="1.10"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardid"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen0"
        android:layout_marginTop="@dimen/dimen10"
        android:layout_weight="0.80"
        card_view:cardBackgroundColor="#4DFFDAB9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen8"
                android:layout_marginStart="@dimen/dimen8"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/subtotal"
                    android:text="@string/subtotal"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textsize24" />

                <TextView
                    android:id="@+id/priceid"
                    android:layout_width="@dimen/dimen0"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen8"
                    android:layout_marginStart="@dimen/dimen8"
                    android:layout_weight="0.5"
                    android:text="@string/_5_66"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textsize24" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen1"
                android:background="#d3d3d3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dimen0"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen8"
                    android:layout_marginStart="@dimen/dimen8"
                    android:layout_weight="1"
                    android:contentDescription="@string/tax"
                    android:text="@string/tax"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textsize24" />

                <TextView
                    android:id="@+id/taxid"
                    android:layout_width="@dimen/dimen0"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen8"
                    android:layout_marginStart="@dimen/dimen8"
                    android:layout_weight="0.5"
                    android:text="@string/_0_00"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textsize24" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen1"
                android:background="#d3d3d3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dimen0"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen8"
                    android:layout_marginStart="@dimen/dimen8"
                    android:layout_weight="1"
                    android:contentDescription="@string/order_total"
                    android:text="@string/order_total"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textsize24" />

                <TextView
                    android:id="@+id/totalprice"
                    android:layout_width="@dimen/dimen0"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen8"
                    android:layout_marginStart="@dimen/dimen8"
                    android:layout_weight="0.5"
                    android:text="@string/_20_78"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textsize24" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen0"
        android:layout_weight="0.15"
        android:contentDescription="@string/payment_methods"
        android:text="@string/payment_methods"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textsize24" />

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardviewid"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen0"
        android:layout_weight="0.15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen60"
            android:background="@drawable/spinner_bg"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/dimen0"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:contentDescription="@string/pay_with"
                android:fontFamily="serif"
                android:text="@string/pay_with"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textsize19" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen60"
                android:layout_weight="1"
                android:contentDescription="@string/payment_method"
                android:prompt="@string/payment_method"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textsize21">

            </Spinner>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
