<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen5"
        android:layout_marginStart="@dimen/dimen5"
        android:layout_marginEnd="@dimen/dimen10"
        android:layout_marginRight="@dimen/dimen10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/beefcut"
        android:contentDescription="@string/beef"
        android:id="@+id/widget_posterid"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/widget_posterid"
        android:layout_toEndOf="@id/widget_posterid"
        android:textSize="@dimen/textsize14"
        android:text="@string/babycorn"
        android:textColor="@android:color/black"
        android:id="@+id/widget_recipetextid"/>
    <TextView
        android:layout_width="@dimen/dimen50"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/widget_posterid"
        android:layout_toRightOf="@id/widget_posterid"
        android:layout_below="@id/widget_recipetextid"
        android:text="@string/_5_99"
        android:textColor="@android:color/black"
        android:id="@+id/widget_costextid"/>

    </RelativeLayout>
    </FrameLayout>